@startuml ERD

skinparam linetype ortho

' !define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>PK</b>    x
!define foreign_key(x) <b>FK</b>    x
!define field(x) \t x
!define not_null(x) <u>x</u>
hide methods
hide stereotypes

entity "Country" {
    primary_key(Id) : int
    --
    field(Name) : varchar(10)
    field(LeaderName) : varchar(10)
}

entity "Region" {
    primary_key(Id) : int
    --
    foreign_key(countryId) : int
    field(Name) : varchar(10)
    field(LeaderName) : varchar(10)
}

entity "City" {
    primary_key(Id) : int
    --
    foreign_key(regionId) : int
    field(Name) : varchar(10)
    field(LeaderName) : varchar(10)
}

Country ||--|{ Region

Region  ||--|{ City


@enduml
